pdns-recursor: Autospec creation for update from version 4.8.1 to version 4.8.4
Alexis Romero (3):
      Avoid Microsoft repo for ODBC. Step 1: allow apt downgrades
      Avoid Microsoft repo for ODBC. Step 1: codeql allow apt downgrades
      gh actions: simplified collector job in build-and-test-all.yml

Josh Soref (1):
      Switch from set-output tot GITHUB_OUTPUT

Otto Moerbeek (21):
      Properly encode json string containing binary data
      Fix compilation on FreeBSD. reported by HellSpawn
      For setting socket buf size not decreasing is not an error
      rec: Backport 12407 to rec-4.8.x: do not chain ecs enabled queries
      Reformat
      rec: Backport 12374 to rec-4.8.x: make cache cleaning more fair when under pressure
      close newfs on fopen fail
      Include <cmath>
      Change the logic a bit, as negcache->get() can be called with qtype = QType:::ENT,
      rec: backport 12368 to rec-4.8.x: Add the 'parse packet from auth' error message to structured logging
      rec: backport 12395 to rec-4.8.x: When the stale function is triggered, wrong data can be returned from negcache and record cache
      rec: Backport 12467 to rec: 4.8.x: do not use "message" as key, it has a special meaning to systemd-journal
      Call the right wipe function for negcache
      Simplify serve-stale logic
      Fix serve-stale logic in negcache by following the record cache case more closely
      rec: Backport 12347 to rec-4.x.8: Use correct logic for isEntryUsable()
      rec: Backport 12495 to rex-4.8.x: Change a few logging urgency levels
      rec: Backport 12598 to rec-4.8.x: Update validation state after a missing negative indication
      Reinstate refresh && served-stale logic
      Rec: test that an ImmediateServFailException isn't hidden by the serve-stale logic
      PowerDNS Security Advisory 2023-02: Deterred spoofing attempts can lead to authoritative servers being marked unavailable (CVE-2023-26437)

Peter van Dijk (3):
      lock.hh: include <st

--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = pdns-recursor
-url = https://downloads.powerdns.com/releases/pdns-recursor-4.8.1.tar.bz2
+url = https://downloads.powerdns.com/releases/pdns-recursor-4.8.4.tar.bz2
 archives = 
 giturl = https://github.com/PowerDNS/pdns.git
 domain = 
@@ -14,11 +14,13 @@ allow_test_failures = false
 # unset %build ld_as_needed variable
 asneeded = false
 # this package is trusted enough to automatically update (used by other tools)
-autoupdate = false
+autoupdate = true
 # extend flags with '-std=gnu++98
 broken_c++ = false
 # disable parallelization during build
 broken_parallel_build = false
+# create vendor archive with cargo
+cargo_vendor = false
 # this package is a library compatibility package and only ships versioned library files
 compat = false
 # set conservative build flags
